logs/watchdog_20251013_0030.log
[13/10/2025  0:30:01,62] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  0:30:01,84] END WATCHDOG 
